--- a/GC_MS_5_1A.qmd
+++ b/GC_MS_5_1A.qmd
@@ -65,7 +65,6 @@ hist(gcms_clap_clean$"20 µg/mL",
      xlab = "RRF",
      col = "red")
 
-
 ```
 
 # LC/MS pos data
@@ -270,14 +269,10 @@ hist(simulated_RRF,
 Uniform concentration around the AET \\ Non Parametric Bootstrap with replacement of the GC/MS dataset \\ UF correction : from 2, 4, 5, 10 and UF = 1/(1-RSD)
 
 ```{r}
-#rsd <- function(x) {
-  #return(sd(x, na.rm = TRUE) / mean(x, na.rm = TRUE))
-#}
-
 rsd <- function(x) {
-  x_use = x[x<=1&x>0.05]
-  return(sd(x_use, na.rm = TRUE) / mean(x_use, na.rm = TRUE))
+  return(sd(x, na.rm = TRUE) / mean(x, na.rm = TRUE))
 }
+
 
 set.seed(123)
 N_sim <- 10000
@@ -413,6 +408,12 @@ summary_table <- rbind(summary_table, data.frame(
 ## GC-MS Correction RRFlow
 
 ```{r}
+
+rsd <- function(x) {
+  x_use = x[x<=2&x>0.05]
+  return(sd(x_use, na.rm = TRUE) / mean(x_use, na.rm = TRUE))
+}
+
 set.seed(123)
 N_sim <- 10000
 N_extractables <- 80
@@ -425,6 +426,8 @@ total_points <- N_sim * N_extractables
 RRF_GCMS_superior0 <- gcms_clap_clean$"5 µg/mL"
 RRF_GCMS_superior0 <- RRF_GCMS_superior0[RRF_GCMS_superior0 > 0]
 
+UF <- 1/(1-rsd(RRF_GCMS_superior0))
+
 for (i in 1:N_sim) {
 
 ## 1) Concentration around the AET
@@ -436,7 +439,8 @@ simulated_RRF <- sample(gcms_clap_clean$"5 µg/mL", size = N_extractables, repla
 exp_conc <- base_conc_sim * simulated_RRF
 corrected_conc <- exp_conc
 condition <- (simulated_RRF < 0.5) | (simulated_RRF > 2)
-corrected_conc[condition] <- exp_conc[condition] / simulated_RRF[condition]
+corrected_conc[!condition] <- exp_conc[!condition] * UF
+corrected_conc[condition] <- base_conc_sim[condition]
 
 total_FN <- total_FN + sum((base_conc_sim > AET) & (corrected_conc < AET), na.rm = TRUE)
 total_FP <- total_FP + sum((base_conc_sim < AET) & (corrected_conc > AET), na.rm = TRUE)
@@ -489,6 +493,8 @@ total_points <- N_sim * N_extractables
 RRF_GCMS_superior0 <- gcms_clap_clean$"5 µg/mL"
 RRF_GCMS_superior0 <- RRF_GCMS_superior0[RRF_GCMS_superior0 > 0]
 
+UF <- 1/(1-rsd(RRF_GCMS_superior0))
+
 for (i in 1:N_sim) {
 
 ## 1) Concentration around the AET
@@ -497,9 +503,10 @@ base_conc_sim <- runif(N_extractables, min = 0.5 * AET, max = 2 * AET)
 simulated_RRF <- sample(gcms_clap_clean$"5 µg/mL", size = N_extractables, replace = FALSE)
 ## V RRF < 1
 
-corrected_conc <- base_conc_sim * simulated_RRF
+exp_conc <- base_conc_sim * simulated_RRF
+corrected_conc <- exp_conc
 condition <- (simulated_RRF < 1)
-corrected_conc[condition] <- corrected_conc[condition] / simulated_RRF[condition]
+corrected_conc[condition] <- exp_conc[condition] * UF
 
 total_FN <- total_FN + sum((base_conc_sim > AET) & (corrected_conc < AET), na.rm = TRUE)
 total_FP <- total_FP + sum((base_conc_sim < AET) & (corrected_conc > AET), na.rm = TRUE)
@@ -531,6 +538,92 @@ summary_table <- rbind(summary_table, data.frame(
 
 
 ```
+
+## optimized UF?
+```{r}
+set.seed(123)
+
+target_recall <- 0.95
+found <- FALSE
+optimal_UF <- NA
+
+N_sim <- 10000
+N_extractables <- 80
+total_points <- N_sim * N_extractables
+
+RRF_GCMS_superior0 <- gcms_clap_clean$"5 µg/mL"
+RRF_GCMS_superior0 <- RRF_GCMS_superior0[RRF_GCMS_superior0 > 0]
+
+for (test_UF in seq(1, 100, by = 1)) {
+  
+
+  total_FN <- 0
+  total_FP <- 0
+  total_TP <- 0
+  total_TN <- 0
+
+  for (i in 1:N_sim) {
+    base_conc_sim <- runif(N_extractables, min = 0.5 * AET, max = 2 * AET)
+    simulated_RRF <- sample(gcms_clap_clean$"5 µg/mL", size = N_extractables, replace = FALSE)
+    
+    exp_conc <- base_conc_sim * simulated_RRF
+    corrected_conc <- exp_conc
+    
+    condition <- (simulated_RRF < 1)
+    
+    
+    corrected_conc[condition] <- exp_conc[condition] * test_UF 
+
+    total_FN <- total_FN + sum((base_conc_sim > AET) & (corrected_conc < AET), na.rm = TRUE)
+    total_FP <- total_FP + sum((base_conc_sim < AET) & (corrected_conc > AET), na.rm = TRUE)
+    total_TP <- total_TP + sum((base_conc_sim > AET) & (corrected_conc > AET), na.rm = TRUE)
+    total_TN <- total_TN + sum((base_conc_sim < AET) & (corrected_conc < AET), na.rm = TRUE)
+  }
+
+
+  current_recall <- total_TP / (total_TP + total_FN)
+  
+  print(paste("Testing UF:", test_UF, "-> Recall:", round(current_recall, 4))) 
+
+  if(current_recall >= target_recall) {
+    optimal_UF <- test_UF
+    found <- TRUE
+    break 
+  }
+}
+
+print(paste("Optimal UF for 95% Recall:", optimal_UF))
+
+FN_Rate_final <- total_FN / total_points
+FP_Rate_final <- total_FP / total_points
+TP_Rate_final <- total_TP / total_points
+TN_Rate_final <- total_TN / total_points
+precision <- TP_Rate_final / (TP_Rate_final+FP_Rate_final)
+recall <- TP_Rate_final / (TP_Rate_final + FN_Rate_final)
+F1 <- (2 * precision * recall / (precision + recall))
+beta <- 5
+f_beta <- (1 + beta^2) * (precision * recall) / ((beta^2 * precision) + recall)
+
+
+summary_table <- rbind(summary_table, data.frame(
+  Method = "RRF_optimized",
+  FN_Rate = FN_Rate_final,
+  FP_Rate = FP_Rate_final,
+  FN_SD = sqrt(FN_Rate_final * (1 - FN_Rate_final) / total_points),
+  FP_SD = sqrt(FP_Rate_final * (1 - FP_Rate_final) / total_points),
+  precision = precision,
+  recall = recall,
+  F1 = F1,
+  f_betal = f_beta
+))
+
+```
+
+```{r}
+summary_table
+```
+
+
 
 ## Machine Learning
 
